--- a/team/team_C/twitter_crawling.ipynb
+++ b/team/team_C/twitter_crawling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -24,37 +24,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RT @ImDataScientist: RT @BoozAllen: What's next for #DataScience? @KirkDBorne shares 9 key domains: https://t.co/Piaw1eww7s #DataSciBowl ht…\n",
-      "Regular: What's next for DataScience?shares 9 key domains:  DataSciBowl ht…\n",
+      "machinelearnbot: Data Science From Scratch: First Principles With Python here  https://t.co/meBRwI8trR #datascience machinelearnbot\n",
+      "Regular: machinelearnbot: Data Science From Scratch: First Principles With Python here   datascience machinelearnbot\n",
       "\n",
-      "Scalable data science with R https://t.co/2SnYIg655L #feedly\n",
-      "Regular: Scalable data science with R  feedly\n",
+      "Data Science Retail software Take Retail software To The Next Level - #Retailsoftware Things You Need To Know https://t.co/KUJ2Kdwb3r\n",
+      "Regular: Data Science Retail software Take Retail software To The Next Level - Retailsoftware Things You Need To Know\n",
       "\n",
-      "Ritesh M Srivastava, Head of Data Science at @YatraOfficial to speak at #cypher2016\n",
+      "RT @EricDBrown: 'Analytics Is A Leadership Problem, Not An IT Problem, And Not A Data Science Problem'  https://t.co/EaxOKF9lP2 https://t.c…\n",
+      "Regular: 'Analytics Is A Leadership Problem, Not An IT Problem, And Not A Data Science Problem'\n",
       "\n",
-      "https://t.co/l1617mNayM https://t.co/N5J4cEyOWT\n",
-      "Regular: Ritesh M Srivastava, Head of Data Science atto speak at cypher2016\n",
+      "RT @ProgrammingLan: #ruby #code #JavaScript Discover the greatest benefits of #Python and R https://t.co/MYHfmB6xMA\n",
+      "Regular: ruby code JavaScript Discover the greatest benefits of Python and R\n",
       "\n",
-      "The \"Joel Test\" for Data Science teams: a highly irresponsible sloppy test to rate quality of teams https://t.co/RinqFvf2Gv\n",
-      "Regular: The \"Joel Test\" for Data Science teams: a highly irresponsible sloppy test to rate quality of teams\n",
+      "Data Science From Scratch: First Principles With Python here  https://t.co/tMX2MLtZQD #datascience machinelearnbot\n",
+      "Regular: Data Science From Scratch: First Principles With Python here   datascience machinelearnbot\n",
       "\n",
-      "RT @jgcoppens: In a world where #data is power, @iMinds data scientists level the playing field https://t.co/d9JJV0OFHm #datascience #insig…\n",
-      "Regular: In a world where data is power,data scientists level the playing field  datascience insig…\n",
+      "Join me at #MSDataScience for the Microsoft Data Science Summit September 26 – 27, in Atlanta, GA. Register now at https://t.co/rFPynLcwyp\n",
+      "Regular: Join me at MSDataScience for the Microsoft Data Science Summit September 26 – 27, in Atlanta, GA. Register now at\n",
       "\n",
-      "RT @ASIDataScience: New blog post: London's most polluted parks identified by new ASI Data Science Project https://t.co/ThZHCXw4MX https://…\n",
-      "Regular: New blog post: London's most polluted parks identified by new ASI Data Science Project  https://…\n",
+      "RT @techjunkiejh: Data Storytelling: The Essential #DataScience Skill Everyone Needs https://t.co/mg6529gcZb #bigdata https://t.co/XothQTqC…\n",
+      "Regular: Data Storytelling: The Essential DataScience Skill Everyone Needs  bigdata\n",
       "\n",
-      "OpenSearchNet: Data Science &amp; Crime Analysis... permanent role in #Milan JobDetailPage https://t.co/qtXTjqZwMM #beopenbehappy #osn\n",
-      "Regular: OpenSearchNet: Data Science  Crime Analysis... permanent role in Milan JobDetailPage  beopenbehappy osn\n",
+      "Articles on data science best practices from the internet https://t.co/q1wyzgSEvg  @ucsdexttech @billkimler @healthy_wrld #datascience\n",
+      "Regular: Articles on data science best practices from the internet @billkimlerdatascience\n",
       "\n",
-      "Data Science &amp; Crime Analysis... permanent role in #Milan JobDetailPage https://t.co/JUCrJd3Cwu\n",
-      "Regular: Data Science  Crime Analysis... permanent role in Milan JobDetailPage\n",
+      "RT @HRCurator: RT @valentina_feren Thx4RT fr @HRCurator  Data Science, Data Insight, Data Wisdom #HRAnalytics #PeopleAnalytics #HR https://…\n",
+      "Regular: Thx4 fr Data Science, Data Insight, Data Wisdom HRAnalytics PeopleAnalytics HR\n",
       "\n",
-      "#DataScience for #InternetofThings methodology - Evolving #CRISPDM - Part One https://t.co/6ecJfpqVhy via @datasciencectrl  #abdsc\n",
-      "Regular: DataScience for InternetofThings methodology - Evolving CRISPDM - Part One   abdsc\n",
-      "\n",
-      "RT @MicrosoftIoT: Join us for hands-on #IoT learning at the #MSDataScience in Atlanta. Register now: https://t.co/vpc2PTvL1e https://t.co/z…\n",
-      "Regular: Join us for hands-on IoT learning at the MSDataScience in Atlanta. Register now:  …\n",
+      "https://t.co/fIa6pvlKYR #DataScience #Statisticallearningtheory #GISP #RationalDOORS #BehavioralEconomics #YouKnowY… https://t.co/DYmHigV1v5\n",
+      "Regular: DataScience Statisticallearningtheory GISP RationalDOORS BehavioralEconomics YouKnowY…\n",
       "\n"
      ]
     }
@@ -76,7 +74,7 @@
     "    \n",
     "    print(text.decode())\n",
     "    \n",
-    "    p = re.compile('(http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+)|(via)?\\s(by)?\\s?@\\w+.|RT|&amp;|\\n|#|')\n",
+    "    p = re.compile('(http[s]?(://(?:[a-zA-Z]|[0-9]|[$-_@.&+…]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+)?)|(via)?\\s(by)?\\s?@\\w+.|RT|&amp;|\\n|#|')\n",
     "    text_RE = (p.sub(\"\", text.decode())).strip()\n",
     "        \n",
     "    print(\"Regular:\", text_RE.strip())\n",
@@ -88,9 +86,9 @@
     "    \n",
     "        count += 1\n",
     "        \n",
-    "        f = open(\"%d.txt\" % count , 'w')\n",
-    "        f.write(text_RE)\n",
-    "        f.close()\n",
+    "        with open(\"%d.txt\" % count , 'w', encoding='UTF-8', newline='') as f:\n",
+    "            f.write(text_RE)\n",
+    "            f.close()\n",
     "        \n",
     "    #print(\"Regular:\", text_1.strip())\n",
     "    #print(\"\")\n",
